kubernetes/apps/atuin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "atuin.k8s.local"
  rules:
    - backendRefs:
        - name: atuin
          port: 8888
